# rules_aip

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
aip/: BUILD.bazel  defs.bzl  extensions.bzl
aip/private/: BUILD.bazel  library.bzl  lint.bzl
examples/: BUILD.bazel
examples/proto/bookstore/v1/: bookstore.proto
tools/api-linter/: BUILD.bazel  go.mod  go.sum
