# Bazel rules for Google AIP (https://aip.dev) proto linting.
#
# Centralizes the api-linter toolchain + a reusable `aip_proto_lint` test rule
# and an `aip_proto_library` macro (bundles the standard googleapis AIP deps),
# replacing the per-repo `tools/api-linter` copy + hand-rolled lint genrule.
#
# Named for the domain, scoped to the AIP toolkit — protovalidate / buf-breaking
# / gateway generation can join later without a rename.
module(
    name = "rules_aip",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "googleapis", version = "0.0.0-20260422-20ac242a")

# The api-linter is the upstream Go binary (github.com/googleapis/api-linter),
# fetched once here via rules_go + gazelle and re-exposed as a Bazel tool.
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//tools/api-linter:go.mod")
use_repo(go_deps, "com_github_googleapis_api_linter_v2")
