# The upstream Go AIP api-linter, fetched via go_deps in //MODULE.bazel and
# re-exposed under a stable label so the rules in //aip don't hard-code the
# gazelle-generated repo name.
package(default_visibility = ["//visibility:public"])

alias(
    name = "api-linter",
    actual = "@com_github_googleapis_api_linter_v2//cmd/api-linter:api-linter",
)
